themes/hugo-creative-portfolio-theme/static/css/style.pink.css
/* ... */
.sidebar-menu {
  list-style-type: none;
  padding-left: 20px;
  margin-bottom: 40px;
}
.sidebar-menu li {
  margin-bottom: 5px;
}
.sidebar-menu li a {
  color: #555555;
}
.sidebar-menu li:before {
  font-family: 'FontAwesome';
  content: '\f105';
  margin: 0 5px 0 -15px;
  color: #999999;
}
.sidebar-menu li.active a {
  color: #ef5285;
  font-weight: bold;
}
.sidebar-menu li.active:before {
  color: #ef5285;
}
.sidebar-menu li:hover a {
  text-decoration: none;
  color: #ef5285;
}
.sidebar-menu li:hover:before {
  color: #ef5285;
}
.content-column {
  padding-top: 40px;
}
.content-column.white-background {
  background: #fff;
  min-height: 100vh;
}
.grid {
  padding-top: 5px;
  overflow-y: hidden;
}
.content-column-content {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
}
@media (min-width: 1200px) {
  .content-column-content {
    padding-left: 40px;
    padding-right: 40px;
  }
}
.content-column-content p.lead {
  color: #555555;
}
.content-column-content p,
.content-column-content li {
  color: #999999;
}
.content-column-content ul li {
  list-style-type: none;
}
.content-column-content ul li:before {
  font-family: 'FontAwesome';
  content: '\f105';
  margin: 0 5px 0 -15px;
  color: #ef5285;
}
.small-navbar {
  margin-bottom: 20px;
}
.small-navbar:before,
.small-navbar:after {
  content: " ";
  display: table;
}
.small-navbar:after {
  clear: both;
}
.small-navbar-heading {
  float: right;
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  margin-top: 10px;
}
.small-navbar-heading a {
  color: #000;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}
.small-navbar-heading a:hover {
  border-bottom: dotted 1px #ef5285;
  color: #000;
  text-decoration: none;
}
/*

=====================
OFF-CANVAS SIDEBAR BEHAVIOUR
=====================

*/
@media screen and (max-width: 767px) {
  .row-offcanvas {
    position: relative;
    -webkit-transition: all 0.25s ease-out;
    -o-transition: all 0.25s ease-out;
    transition: all 0.25s ease-out;
    opacity: 1;
  }
  .row-offcanvas-right {
    right: 0;
  }
  .row-offcanvas-left {
    left: 0;
  }
  .row-offcanvas-right .sidebar-offcanvas {
    right: -50%;
    /* 6 columns */
  }
  .row-offcanvas-left .sidebar-offcanvas {
    left: -48%;
    /* 6 columns */
  }
  .row-offcanvas-right.active {
    right: 50%;
    /* 6 columns */
  }
  .row-offcanvas-left.active {
    left: 50%;
    /* 6 columns */
  }
  .sidebar-offcanvas {
    position: absolute;
    top: 0;
    width: 50%;
    /* 6 columns */
  }
}
/*

=====================
SERVICES / INTEGRATIONS
=====================

*/
.services {
  margin-top: 80px;
  text-align: center;
}
.services .services-heading {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-size: 18px;
  font-weight: 400;
  color: #999999;
  margin-bottom: 40px;
}
.services .heading {
  font-size: 18px;
  font-weight: 700;
  margin-bottom: 20px;
  text-align: center;
}
.services .heading:after {
  content: " ";
  display: block;
  width: 100px;
  height: 1px;
  margin: 20px auto 20px;
  background: #ef5285;
}
.services p {
  font-size: 14px;
  line-height: 1.5;
  margin-bottom: 60px;
  color: #999999;
}
/*

=====================
CUSTOMERS
=====================

*/
.customer {
  text-align: center;
}
.customer img {
  display: inline-block;
  margin-top: 10px;
  margin-bottom: 10px;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
}
.customer img:hover {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
}
/*

=====================
SIGN UP FORM
=====================

*/
@media (max-width: 991px) {
  .sign-up-form .form-control {
    margin-bottom: 20px;
  }
  .sign-up-form .btn {
    margin-bottom: 20px;
  }
}
@media (min-width: 768px) {
  .sign-up-form .form-control {
    width: 350px;
  }
}
/*

=====================
SOCIAL LINKS
=====================

*/
.contact-form {
  margin-bottom: 20px;
}
p.social {
  margin-top: 20px;
}
p.social a {
  margin: 0 10px 10px 0;
  color: #fff;
  display: inline-block;
  width: 40px;
  height: 40px;
  border-radius: 20px;
  line-height: 40px;
  font-size: 15px;
  text-align: center;
  vertical-align: bottom;
  border: solid 1px #999999;
  color: #999999;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  /*
             &.facebook {background-color: #4460ae; border-color: #4460ae;}
             &.gplus {background-color: #c21f25; border-color: #c21f25;}
             &.twitter {background-color: #3cf; border-color: #3cf;}
             &.instagram {background-color: #cd4378; border-color: #cd4378;}
             &.email {background-color: #4a7f45; border-color: #4a7f45;}
             &.link {background-color: #871AFF; border-color: #871AFF;}
             */
}
p.social a:hover {
  color: #ef5285;
  border-color: #ef5285;
}
p.social a i {
  vertical-align: bottom;
  line-height: 40px;
}
p.social.social--outline a {
  background: transparent;
}
p.social.social--outline a.facebook {
  color: #4460ae;
  border-color: #4460ae;
}
p.social.social--outline a.gplus {
  color: #c21f25;
  border-color: #c21f25;
}
p.social.social--outline a.twitter {
  color: #3cf;
  border-color: #3cf;
}
p.social.social--outline a.instagram {
  color: #cd4378;
  border-color: #cd4378;
}
p.social.social--outline a.email {
  color: #4a7f45;
  border-color: #4a7f45;
}
p.social.social--outline a.link {
  color: #871AFF;
  border-color: #871AFF;
}
p.social.social--big a {
  width: 60px;
  height: 60px;
  border-radius: 30px;
  line-height: 60px;
  font-size: 25px;
}
p.social.social--big i {
  line-height: 60px;
}
/*

=====================
COPYRIGHT
=====================

*/
.copyright {
  color: #999999;
  font-size: 13px;
}
.copyright p.credit {
  margin-bottom: 10px;
}
.copyright p.credit a {
  color: #999999;
}
/* ... */

